--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation Bar-->
 
     <nav class="navbar">
-        <h1 class="logo"><a href="https://www.keralatourism.org/" class="aaa" target="_blank">Booklink.com</a></h1>
+        <h1 class="logo"><a href="#" class="aaa" target="_blank">Booklink.com</a></h1>
         <ul class="nav-link">
             <li calss="active"><a href="#" class="aaa">Home</a></li>
             <li><a href="#" class="aaa" >Books</a></li>
@@ -37,7 +37,7 @@
             <h2>Online Book</h2>
             <div class="line"></div>
             <h1>Library</h1>
-            <a href="https://palakkad.nic.in/tourist-places/" target="_blank" class="ctn">Learn More</a>
+            <a href="#" target="_blank" class="ctn">Learn More</a>
         </div>
     </header>
     <section calss="place">
